# lane-line-detection-ROS2-CPP

./: README.md
cpp_advanced_lane_lines/: CMakeLists.txt  package.xml
cpp_advanced_lane_lines/configs/: config.yaml
cpp_advanced_lane_lines/include/: cpp_lane_line_detection.h
cpp_advanced_lane_lines/launch/: lane_line_detection_launch.py
cpp_advanced_lane_lines/src/: cpp_lane_line_detection.cpp  main.cpp
lane_line_msgs/: CMakeLists.txt  package.xml
lane_line_msgs/msg/: Line.msg
